--- a/website/style.css
+++ b/website/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background: #fffff8;
+    background: #1758ae;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 
     background-image: url('imgs/wp6603421.jpg');
